# mathematics

./: .env  pyproject.toml  requirements.txt  run_ml_strategy.py  run_strategy.py  test_feature_engineer.py  test_fetch.py  test_imports.py  test_ml_strategy.py  test_strategy.py  training_log.csv
algo_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/cache/: AAPL_2020-01-01_2023-12-13.parquet  AAPL_2022-01-01_2024-01-10.parquet  AAPL_2022-12-15_2024-12-14.parquet  AAPL_2023-12-14_2024-12-13.parquet  AMZN_2022-01-01_2024-01-10.parquet  GOOGL_2022-01-01_2024-01-10.parquet  GOOGL_2022-12-15_2024-12-14.parquet  GOOGL_2023-12-14_2024-12-13.parquet  HD_2020-01-01_2023-12-13.parquet  JNJ_2020-01-01_2023-12-13.parquet  JPM_2020-01-01_2023-12-13.parquet  JPM_2022-01-01_2024-01-10.parquet  META_2022-01-01_2024-01-10.parquet  META_2023-12-14_2024-12-13.parquet  MSFT_2020-01-01_2023-12-13.parquet  MSFT_2022-01-01_2024-01-10.parquet  MSFT_2022-12-15_2024-12-14.parquet  MSFT_2023-12-14_2024-12-13.parquet  NVDA_2022-01-01_2024-01-10.parquet  NVDA_2023-12-14_2024-12-13.parquet  PG_2020-01-01_2023-12-13.parquet  TSLA_2022-01-01_2024-01-10.parquet  UNH_2020-01-01_2023-12-13.parquet  V_2020-01-01_2023-12-13.parquet  V_2022-01-01_2024-01-10.parquet  WMT_2020-01-01_2023-12-13.parquet  WMT_2022-01-01_2024-01-10.parquet  XOM_2020-01-01_2023-12-13.parquet
models/: best_model.keras  evaluation_metrics.json  training_history.json
results/: backtest_results.csv
src/: main.py  portfolio.py
src/config/: __init__.py  config.py  ml_strategy_config.py  (+2 more)
tests/: test_ml_strategy.py
(+1018 files in other folders)
