[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo_trading"
version = "0.1.0"
description = "Algorithmic Trading System"
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.8.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "optuna>=2.10.0",
    "joblib>=1.1.0",
    "pathlib>=1.0.1",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "yfinance>=0.1.70",
    "empyrical>=0.5.5",
    "pyfolio>=0.9.2"
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
